--- a/src/components/table-toolbar/styles.css
+++ b/src/components/table-toolbar/styles.css
@@ -55,6 +55,44 @@
   margin-right: 6px;
 }
 
+.sort-button-enabled {
+  background-color: white;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 26px;
+  cursor: pointer;
+  margin-right: 18px;
+  width: 110px;
+  border: 1px solid #2653f1;
+}
+
+.filter-button {
+  background-color: white;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 26px;
+  cursor: pointer;
+  margin-right: 18px;
+  min-width: 125px;
+}
+
+.filter-count {
+  background-color: white;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 26px;
+  cursor: pointer;
+  margin-right: 18px;
+  width: 157px;
+  border: 1px solid #2653f1;
+}
+
 @media screen and (max-width: 1103px) {
   div.search {
     display: none;
